# claudia

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODOS.md  pyproject.toml
.github/workflows/: chart.yml  image.yml  redteam.yml  test.yml
app/: auth.py  claude.py  config.py  context.py  crypto.py  db.py  db_audit.py  db_kv.py  extractors.py  google_auth.py  library.py  library_pipeline.py  library_stream.py  logging.json  main.py  people.py  runtime_config.py  safety.py  session_keys.py  setup_autodraft.py  storage.py  storage_sqlite.py  summariser.py  tool_loop.py
app/prompts/: auditor-adult.md  auditor-kid.md  companion-adult.md  companion-kid.md  handover.md  meta-audit.md
app/static/: claudia.css
app/templates/: base.html  break_glass_envelope.html  connect_gmail.html  help.html  home.html  kid_login.html  library.html  login.html  people.html  report.html  session_chat.html  session_review.html  settings.html
app/templates/admin/: home.html  review.html
app/templates/fragments/: kid_attach_pair.html  library_detail.html  library_row.html  library_status.html  (+5 more)
app/tools/: __init__.py  calendar.py  documents.py  gmail.py  people.py  registry.py
chart/: Chart.yaml  README.md  values.schema.json  values.yaml
chart/templates/: .gitkeep  _helpers.tpl  deployment.yaml  httproute.yaml  ingress.yaml  pvc.yaml  service.yaml
docs/: build-plan-v1.md  design.md  library-people-plan.md  qa-protocol.md  safety.md  storage-decision.md
docs/wireframe/: admin-break-glass.html  admin-home.html  admin-review.html  chat-adult.html  chat-kid.html  home-adult.html  index.html  kid-firstchat.html  library-adult.html  memory-diff-adult.html  people-adult.html  report-adult.html  settings.html  setup-adult-1.html  setup-adult-2.html  setup-adult-3.html  setup-kid-1.html  setup-kid-2.html  setup-kid-3.html  style.css
examples/: adult-values.yaml  kid-values.yaml
scripts/: preflight.sh
tests/: redteam_scenarios.yaml  test_auth.py  test_context_loader.py  test_crypto.py  test_db_audit.py  test_db_kv.py  test_extractors.py  test_google_integration_gating.py  test_google_oauth_identity.py  test_kid_attach.py  test_library.py  test_library_routes.py  test_library_stream.py  test_parent_name_and_auditor_mode.py  test_people.py  test_people_routes.py  test_people_tools.py  test_redteam.py  test_report_and_feedback.py  test_runtime_config.py  test_safety.py  test_session_end_flow.py  test_session_review.py  test_settings.py  test_setup_autodraft.py  test_setup_wizard.py  test_storage.py  test_therapist_alias.py  test_tools.py
(+5 files in other folders)
