[project]
name = "robo-therapist"
version = "0.1.0"
description = "Self-hosted private therapy sounding-board. Single-user. Not for distribution."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pypdf>=5.0",
    "structlog>=24.4",
    "python-dateutil>=2.9",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "reportlab>=4.4.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
