[project]
name = "claudia"
version = "0.4.0"
description = "Self-hosted single-tenant AI companion for autistic adults and parents of neurodivergent kids. Adult or kid mode per Helm release."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pypdf>=5.0",
    "structlog>=24.4",
    "python-dateutil>=2.9",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "reportlab>=4.4.10",
    "cryptography>=43.0",
    "argon2-cffi>=23.1",
    "pillow>=11.0",
    "python-docx>=1.1",
    "pdf2image>=1.17",
    "pdfplumber>=0.11",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E501 = line-too-long (we use 100 cols but allow longer where it reads cleaner).
# The remainder are stylistic-choice rules tolerated in lifted robo-therapist code;
# Step 2 (adult-mode parity work) revisits these as the modules are refactored.
ignore = ["E501", "B904", "B008", "E731", "SIM102", "SIM105", "SIM117"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
